kubernetes.in.yml
# Edegal deployment using Kubernetes
# usage: emrichen kubernetes.in.yml | kubectl apply -n edegal -f -

!Defaults
public_hostname: edegal.127.0.0.1.xip.io
tag: staging
image: !Format conikuvat/edegal:{tag}
static_image: !Format conikuvat/edegal-static:{tag}

# Common environment vars for both edegal and celery pods.
common_environment:
  - name: EDEGAL_POSTGRESQL_HOSTNAME
    value: postgres
  - name: EDEGAL_POSTGRESQL_DATABASE
    value: edegal
  - name: EDEGAL_POSTGRESQL_USERNAME
    valueFrom:
      secretKeyRef:
        name: postgres
        key: username
  - name: EDEGAL_POSTGRESQL_PASSWORD
    valueFrom:
      secretKeyRef:
        name: postgres
        key: password
  - name: EDEGAL_RABBITMQ_HOSTNAME
    value: rabbitmq
  - name: EDEGAL_RABBITMQ_VHOST
    value: edegal
  - name: EDEGAL_RABBITMQ_USERNAME
    valueFrom:
      secretKeyRef:
        name: rabbitmq
        key: username
  - name: EDEGAL_RABBITMQ_PASSWORD
    valueFrom:
      secretKeyRef:
        name: rabbitmq
        key: password
  - name: SECRET_KEY
    valueFrom:
      secretKeyRef:
        name: edegal
        key: secretKey
  - name: ALLOWED_HOSTS
    value: "*"


#############
# MEMCACHED #
#############
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  labels:
    app: edegal
    service: memcached
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: edegal
    service: memcached

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
spec:
  selector:
    matchLabels:
      app: edegal
      service: memcached
  replicas: 1
  template:
    metadata:
      labels:
        app: edegal
        service: memcached
    spec:
      containers:
      - name: master
        image: memcached
        resources: {}
        ports:
        - containerPort: 6379


############
# RABBITMQ #
############
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: edegal
    service: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: 5672
  selector:
    app: edegal
    service: rabbitmq

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: edegal
      service: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: edegal
        service: rabbitmq
    spec:
      containers:
      - name: master
        image: rabbitmq
        resources: {}
        ports:
        - containerPort: 5672
        volumeMounts:
        - mountPath: /var/lib/rabbitmq
          name: rabbitmq-data
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-data

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: edegal
    service: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: edegal
    service: postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: edegal
      service: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: edegal
        service: postgres
    spec:
      containers:
      - name: master
        image: postgres
        resources: {}
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - edegal
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - edegal
          initialDelaySeconds: 30
          periodSeconds: 30
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data

---
apiVersion: v1
kind: Service
metadata:
  name: edegal
  labels:
    app: edegal
    service: edegal
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: edegal
    service: edegal

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edegal
spec:
  selector:
    matchLabels:
      app: edegal
      service: edegal
  replicas: 1
  template:
    metadata:
      labels:
        app: edegal
        service: edegal
    spec:
      containers:
      - name: master
        image: !Var image
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 8000
        env: !Var common_environment
      volumes:
      - name: edegal-media
        persistentVolumeClaim:
          claimName: edegal-media

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
spec:
  selector:
    matchLabels:
      app: edegal
      service: celery
  replicas: 1
  template:
    metadata:
      labels:
        app: edegal
        service: celery
    spec:
      containers:
      - name: master
        image: !Var image
        args: ["celery", "-A", "edegal.celery_app:app", "worker"]
        imagePullPolicy: Always
        resources: {}
        env: !Var common_environment


###############################
# NGINX (Static file serving) #
###############################
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: edegal
    service: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: edegal
    service: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: edegal
      service: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: edegal
        service: nginx
    spec:
      containers:
      - name: master
        image: !Var static_image
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 80


###########
# INGRESS #
###########
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edegal
spec:
  rules:
    - host: !Var public_hostname
      http:
        paths:
        - path: /api
          backend:
            serviceName: edegal
            servicePort: 8000
        - path: /admin
          backend:
            serviceName: edegal
            servicePort: 8000
        - path: /oauth
          backend:
            serviceName: edegal
            servicePort: 8000
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
